--- a/vs_ide/stm32f4vs/stm32f4vs.vcxproj.filters
+++ b/vs_ide/stm32f4vs/stm32f4vs.vcxproj.filters
@@ -166,6 +166,12 @@
     <Filter Include="stm32f4_vs\Utilities\lwip_drv">
       <UniqueIdentifier>{e0783455-8608-4e15-a6bf-57a6b50a08b4}</UniqueIdentifier>
     </Filter>
+    <Filter Include="stm32f4_vs\Utilities\w25q128_drv">
+      <UniqueIdentifier>{e93547ff-4ce5-4a77-a4af-b3f7b3d0488a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Device-specific files">
+      <UniqueIdentifier>{0d9edf2b-fd5b-4d14-9933-4047d6e8eb8d}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="stm32f4vs-Debug.vgdbsettings">
@@ -1227,11 +1233,14 @@
     <ClInclude Include="..\..\Libraries\LwIP\src\include\netif\ppp\vj.h">
       <Filter>stm32f4_vs\Libraries\LwIP\src\include\netif\ppp</Filter>
     </ClInclude>
+    <None Include="stm32.props">
+      <Filter>Device-specific files</Filter>
+    </None>
+    <ClCompile Include="$(BSP_ROOT)\STM32F4xxxx\StartupFiles\startup_stm32f407xx.c">
+      <Filter>Device-specific files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\Libraries\CMSIS\Device\ST\STM32F4xx\Source\Templates\gcc\startup_stm32f407xx.s">
-      <Filter>stm32f4_vs\Libraries\CMSIS\Device\ST\STM32F4xx\Source\Templates\gss</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\Libraries\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal_cortex.c">
       <Filter>stm32f4_vs\Libraries\STM32F4xx_HAL_Driver\Src</Filter>
     </ClCompile>
@@ -1268,8 +1277,29 @@
     <ClCompile Include="..\..\Libraries\LwIP_port_FreeRTOS\sys_arch.c">
       <Filter>stm32f4_vs\Libraries\LwIP_port_FreeRTOS</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\Utilities\w25q128_drv\w25qx.c">
+      <Filter>stm32f4_vs\Utilities\w25q128_drv</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Libraries\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal_spi.c">
+      <Filter>stm32f4_vs\Libraries\STM32F4xx_HAL_Driver\Src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Libraries\STM32F4xx_HAL_Driver\Src\stm32f4xx_ll_spi.c">
+      <Filter>stm32f4_vs\Libraries\STM32F4xx_HAL_Driver\Src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Utilities\w25q128_drv\w25qx_test.c">
+      <Filter>stm32f4_vs\Utilities\w25q128_drv</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\Libraries\CMSIS\Device\ST\STM32F4xx\Source\Templates\system_stm32f4xx.c">
-      <Filter>stm32f4_vs\Libraries\CMSIS\Device\ST\STM32F4xx\Source\Templates</Filter>
+      <Filter>stm32f4_vs\Libraries\CMSIS\Device\ST\STM32F4xx\Source\Templates\gss</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Libraries\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal_dma.c">
+      <Filter>stm32f4_vs\Libraries\STM32F4xx_HAL_Driver\Src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Utilities\w25q128_drv\spi_w25qx_ll.c">
+      <Filter>stm32f4_vs\Utilities\w25q128_drv</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Libraries\STM32F4xx_HAL_Driver\Src\stm32f4xx_ll_dma.c">
+      <Filter>stm32f4_vs\Libraries\STM32F4xx_HAL_Driver\Src</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1328,6 +1358,18 @@
     </ClInclude>
     <ClInclude Include="..\..\Utilities\lwip_drv\lwipopts.h">
       <Filter>stm32f4_vs\Utilities\lwip_drv</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Utilities\w25q128_drv\conf_w25qx.h">
+      <Filter>stm32f4_vs\Utilities\w25q128_drv</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Utilities\w25q128_drv\w25qx.h">
+      <Filter>stm32f4_vs\Utilities\w25q128_drv</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Utilities\w25q128_drv\w25qx_test.h">
+      <Filter>stm32f4_vs\Utilities\w25q128_drv</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Utilities\w25q128_drv\spi_w25qx_ll.h">
+      <Filter>stm32f4_vs\Utilities\w25q128_drv</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
